--- a/resource.qrc
+++ b/resource.qrc
@@ -14,5 +14,13 @@
         <file>icon/icons8_lens_48px.png</file>
         <file>icon/icons8_connected_48px.png</file>
         <file>icons8_lens.ico</file>
+        <file>icon/icons8_3d_model_48px.png</file>
+        <file>icon/icons8_chessboard_48px.png</file>
+        <file>icon/icons8_line_48px.png</file>
+        <file>icon/icons8_select_48px.png</file>
+        <file>icon/icons8_grid_3_48px_1.png</file>
+        <file>icon/icons8_lipids_48px.png</file>
+        <file>icon/icons8_target_48px.png</file>
+        <file>icon/icons8_opacity_48px.png</file>
     </qresource>
 </RCC>
